made header fixed on mobile

--- a/react-frontend/src/components/Header/Header.css
+++ b/react-frontend/src/components/Header/Header.css
@@ -174,10 +174,15 @@
   
   @media (max-width: 600px) {
     .header {
+      position: fixed;
+      width: 90%;
+      top: 0;
+      left: 0;
       display: flex;
       justify-content: space-between;
       align-items: center;
       padding: 1rem;
+      z-index: 2000;
     }
 
     .header a {
