--- a/react-frontend/src/components/MainContent/MainContent.css
+++ b/react-frontend/src/components/MainContent/MainContent.css
@@ -61,6 +61,7 @@
     .main-content {
       margin: 1rem;
       padding: 0.5rem;
+      padding-top: 5rem;
     }
   
     .intro-text {
